Fix flickering scroll bars in items

--- a/app/src/component/style/Item.scss
+++ b/app/src/component/style/Item.scss
@@ -5,7 +5,6 @@
 	border-radius: 0.5em;
 	padding: 0.5em 0.7em;
 	margin-bottom: 0.5em;
-	overflow: scroll;
 
 	&:last-child {
 		margin-bottom: 0;
@@ -28,6 +27,12 @@
 	@extend .Item-container;
 
 	color: $light-red;
+}
+
+.Item-container-detailed {
+	@extend .Item-container;
+
+	overflow: scroll;
 }
 
 .Item-header {
